--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-       <img class="img" src="images/picture.jpeg" alt="my picture" height="200em" width="200em">
+       <img class="img" src="picture.jpeg" alt="my picture" height="200em" width="200em">
        <d>
          <h1>Hello! I'm Joan Asibor</h1>
           <h2>I am a Developer with a passion for crafting digital experiences currently based in Warsaw, Poland.</h2><br><hr><br>
